v1.2 Responsive: deleted margins and overflow, fixed width on .col, made cleaner css code

--- a/css/style.css
+++ b/css/style.css
@@ -129,9 +129,8 @@ img {
  ************************************************/
 
 @media screen and (min-width: 769px) and (max-width: 1160px) {
-    .container, .steps, .site-header {
+    .container, .site-header {
         width: 100%;
-        margin: 0 auto;
     }
 
     .lessons .container {
@@ -142,9 +141,6 @@ img {
         padding-top: 40px;
     }
 
-    body {
-        overflow-x: hidden;
-    }
 }
 
 /************************************************
@@ -158,7 +154,7 @@ img {
 @media screen and (max-width: 768px) {
     .container, .steps, .site-header {
         width: 768px;
-        margin: 0 auto;
+
     }
     
     .lessons .container {
@@ -176,22 +172,18 @@ img {
 @media screen and (max-width: 480px) {
     .container, .steps, .site-header, .why-us{
         width: 480px;
-        margin: 0 auto;
+    
     }
 
     .container .col {
-        width: 90%;
+        width: 100%;
     }
 
     .container .row {
         flex-wrap: wrap;
     }
 
-    .container .card {
-        padding-bottom: 30px;
-    }
-
-    .why-us img {
+    .container .card, .why-us img {
         padding-bottom: 30px;
     }
 
